--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "docker-build": "docker build -t pigochu/docker-pma-confd:$npm_package_version .",
+    "docker-push": "docker login && docker push pigochu/docker-pma-confd:$npm_package_version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
